# eco399

./: Dockerfile  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  locustfile.py  pyproject.toml
backend/outputs/: ce8392a6d3fe4a7fb88c565d1af04b60_test.csv
backend/src/: celery_app.py  main.py  paddlepaddle.py  tasks.py
backend/tests/: conftest.py  test_api.py
deploy/: deploy.sh  provision.sh
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
test_results/: 2026-02-28_10users_load_test.md  2026-02-28_10users_stats.csv  2026-02-28_10users_stats_history.csv  2026-02-28_load_test.md  2026-02-28_stats.csv  2026-02-28_stats_history.csv  detr_writeup.md
