[tool.poetry]
name = "eco399"
version = "0.1.0"
description = "pdf to csv"
authors = ["Taleen"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
flask = "^3.1.2"
flask-cors = "^6.0.1"
PyMuPDF = "^1.24.0"
Pillow = "^11.0.0"
opencv-python = "^4.10.0"
numpy = "^1.26.0"
paddlepaddle = "^3.0.0"
paddleocr = "^2.8.0"
transformers = "^4.46.0"
torch = "^2.5.0"
werkzeug = "^3.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"